@@ -3,9 +3,9 @@ package me.lundy.lobster.commands;
 import core.GLA;
 import genius.SongSearch;
 import me.lundy.lobster.command.BotCommand;
-import me.lundy.lobster.command.CommandContext;
 import me.lundy.lobster.utils.Reply;
 import net.dv8tion.jda.api.EmbedBuilder;
+import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
 import net.dv8tion.jda.api.interactions.commands.OptionMapping;
 import net.dv8tion.jda.api.interactions.commands.OptionType;
 import net.dv8tion.jda.api.interactions.commands.build.Commands;
@@ -21,51 +21,53 @@ public class LyricsCommand extends BotCommand {
     private static final GLA GLA = new GLA();
 
     @Override
-    public void onCommand(CommandContext context) {
+    public void execute(SlashCommandInteractionEvent event) {
 
-        Optional<OptionMapping> searchOption = Optional.ofNullable(context.getEvent().getOption("search"));
+        var searchOption = Optional.ofNullable(event.getOption("search"));
         String searchString = searchOption.map(OptionMapping::getAsString).orElse("");
-        context.getEvent().deferReply().queue();
+        event.deferReply().queue();
         SongSearch.Hit song;
 
         try {
             song = this.searchSong(searchString);
         } catch (IOException e) {
-            context.getEvent().replyFormat(Reply.ERROR_FETCHING_LYRICS.getMessage(), e.getMessage()).queue();
+            event.replyFormat(Reply.ERROR_FETCHING_LYRICS.getMessage(), e.getMessage()).queue();
             return;
         }
 
         if (song == null) {
-            context.getEvent().getHook().editOriginalFormat(Reply.COULD_NOT_FIND_LYRICS.getMessage(), searchString).queue();
+            event.getHook().editOriginalFormat(Reply.COULD_NOT_FIND_LYRICS.getMessage(), searchString).queue();
             return;
         }
 
         String lyrics = song.fetchLyrics();
-        String title = "## " + song.getArtist().getName() + " - " + song.getTitleWithFeatured() + "\n";
+        String artistName = song.getArtist().getName();
+        String title = song.getTitleWithFeatured();
+        String embedTitle = String.format("## %s - %s\n", artistName, title);
 
-        if ((lyrics + title).length() > 4000) {
-            context.getEvent().getHook().editOriginalFormat(Reply.LYRICS_TOO_LONG.getMessage(), song.getUrl()).queue();
+        if ((lyrics + embedTitle).length() > 4000) {
+            event.getHook().editOriginalFormat(Reply.LYRICS_TOO_LONG.getMessage(), song.getUrl()).queue();
             return;
         }
 
-        EmbedBuilder embedBuilder = new EmbedBuilder()
-                .setColor(context.getSelf().getColor())
-                .setDescription(title)
+        var embedBuilder = new EmbedBuilder()
+                .setColor(event.getGuild().getSelfMember().getColor())
+                .setDescription(embedTitle)
                 .setThumbnail(song.getThumbnailUrl());
 
         embedBuilder.appendDescription(lyrics);
-        context.getEvent().getHook().editOriginalEmbeds(embedBuilder.build()).queue();
+        event.getHook().editOriginalEmbeds(embedBuilder.build()).queue();
     }
 
     @Override
     public SlashCommandData getCommandData() {
-        return Commands.slash("lyrics", "Retrieve lyrics of a song")
-                .addOptions(new OptionData(OptionType.STRING, "search", "Search for a specific song", true));
+        OptionData searchOption = new OptionData(OptionType.STRING, "search", "Search for a specific song", true);
+        return Commands.slash("lyrics", "Retrieve lyrics of a song").addOptions(searchOption);
     }
 
     private SongSearch.Hit searchSong(String searchTerm) throws IOException {
         SongSearch songSearch = GLA.search(searchTerm);
         LinkedList<SongSearch.Hit> hits = songSearch.getHits();
-        return hits.isEmpty() ? null : hits.get(0);
+        return hits.isEmpty() ? null : hits.getFirst();
     }
 }
