@@ -1,10 +1,11 @@
 package me.lundy.lobster.commands;
 
 import me.lundy.lobster.command.BotCommand;
-import me.lundy.lobster.command.CommandContext;
 import me.lundy.lobster.lavaplayer.PlayerManager;
+import me.lundy.lobster.utils.CommandHelper;
 import me.lundy.lobster.utils.Reply;
 import net.dv8tion.jda.api.entities.channel.middleman.AudioChannel;
+import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
 import net.dv8tion.jda.api.exceptions.InsufficientPermissionException;
 import net.dv8tion.jda.api.interactions.commands.OptionMapping;
 import net.dv8tion.jda.api.interactions.commands.OptionType;
@@ -13,36 +14,39 @@ import net.dv8tion.jda.api.interactions.commands.build.OptionData;
 import net.dv8tion.jda.api.interactions.commands.build.SlashCommandData;
 import net.dv8tion.jda.api.managers.AudioManager;
 
-import java.net.URL;
+import java.net.URI;
 
 public class PlayCommand extends BotCommand {
 
     @Override
-    public void onCommand(CommandContext context) {
+    public void execute(SlashCommandInteractionEvent event) {
 
-        if (!context.executorInVoice()) {
-            context.getEvent().reply(Reply.EXECUTOR_NOT_IN_VOICE.getMessage()).setEphemeral(true).queue();
+        var commandHelper = new CommandHelper(event);
+
+        if (!commandHelper.isExecutorInVoiceChannel()) {
+            event.reply(Reply.EXECUTOR_NOT_IN_VOICE.getMessage()).setEphemeral(true).queue();
             return;
         }
 
-        OptionMapping topOption = context.getEvent().getOption("top");
-        String searchTerm = context.getEvent().getOption("search").getAsString();
+        event.deferReply().queue();
+        OptionMapping topOption = event.getOption("top");
+        String searchTerm = event.getOption("search").getAsString();
         boolean isSearchTermValidUrl = isValidUrl(searchTerm);
         String searchQuery = (isSearchTermValidUrl ? searchTerm : "ytsearch:" + searchTerm);
 
-        if (!context.selfInVoice()) {
-            AudioManager audioManager = context.getGuild().getAudioManager();
-            AudioChannel audioChannel = context.getExecutorVoiceState().getChannel();
+        if (!commandHelper.isSelfInVoiceChannel()) {
+            AudioManager audioManager = event.getGuild().getAudioManager();
+            AudioChannel audioChannel = commandHelper.getExecutorVoiceChannel();
 
             try {
                 audioManager.openAudioConnection(audioChannel);
             } catch (InsufficientPermissionException e) {
-                context.getEvent().reply(Reply.ERROR_NO_PERMISSIONS_VOICE.getMessage()).queue();
+                event.reply(Reply.ERROR_NO_PERMISSIONS_VOICE.getMessage()).queue();
                 return;
             }
         }
 
-        PlayerManager.getInstance().loadAndPlay(context, searchQuery, topOption != null && topOption.getAsBoolean());
+        PlayerManager.getInstance().loadAndPlay(event, searchQuery, topOption != null && topOption.getAsBoolean());
     }
 
     @Override
@@ -54,10 +58,9 @@ public class PlayCommand extends BotCommand {
 
     private boolean isValidUrl(String urlString) {
         try {
-            URL url = new URL(urlString);
-            url.toURI();
+            var ignored = URI.create(urlString);
             return true;
-        } catch (Exception ex) {
+        } catch (IllegalArgumentException illegalArgumentException) {
             return false;
         }
     }
